# atolla

./: CMakeLists.txt  README.md  configure  download_dependencies  library.json
cmake/Modules/: AddCMockaTest.cmake
doc/: Atolla Protocol.md
examples/: 01-sink.c  01-yellow.c  02-sine.c  02-yellow.cpp  03-remote.c  03-sine.cpp  04-complementary.cpp
hardware/Arduino+ESP Tutorial/: Installing and Building an Arduino Sketch for the $5 ESP8266 Microcontroller.html
hardware/Arduino+ESP Tutorial/Installing and Building an Arduino Sketch for the $5 ESP8266 Microcontroller_files/: 123582865.html  bootstrap.min.css  common.js  embed.js  essb-display-methods.css  gpt(1).js  header(1).js  header.js  jquery.fitvids.custom.js  js  loader.min.js  make-v3.js  misc.js  print.css  proxy.html  saved_resource  saved_resource(1)  saved_resource.html  service(2).js  service(4).js  service(6).js  service(7).js  service.js  single-story.js  stats.js  style(1).css  style(2).css  sumome-scrollbox-popup.css  sumome-smartbar-popup.css  sumome-welcome-popup.css  util.js
include/atolla/: source.h
protocol/: CMakeLists.txt  download_dependencies  generate  test
protocol/doc/: Atolla Protocol.md
protocol/examples/: 01-yellow.c  02-sine.c  03-remote.c
protocol/include/atolla/: client.h  primitives.h  sink.h  sleep_ms.h  source.h
protocol/src/atolla/: client.c  config.h.in  sink.c  source.c
protocol/src/mem/: block.c  uint16le.h
protocol/src/msg/: builder.c  builder.h  iter.c  iter.h
protocol/src/time/: now.c  sleep.h
protocol/src/udp_socket/: sockets_headers.h  udp_socket.c  udp_socket.h  udp_socket_base.c  udp_socket_bsdlike.c  udp_socket_wifiudp.cpp
protocol/tests/: mem_block_tests.c  msg_builder_tests.c  msg_iter_tests.c  sink_tests.c  source_tests.c  source_to_sink_tests.c  time_tests.c  udp_socket_tests.c
src/atolla/: client_error_messages.h  error_codes.h  sink.cpp  sink.h  source.c  source.cpp  source.h
src/mem/: block.h  ring.h  uint16le.h
src/msg/: builder.c  builder.h  iter.h
src/time/: gettime.h  mach_gettime.c  now.c  sleep.h
src/udp_socket/: udp_socket.h  udp_socket_base.c  udp_socket_base.cpp  udp_socket_bsdlike.c  udp_socket_bsdlike.cpp  udp_socket_results_internal.cpp  udp_socket_wifiudp.cpp
tests/: mem_ring_tests.c  mem_ring_tests.cpp  msg_builder_tests.cpp  msg_iter_tests.c  msg_iter_tests.cpp  sink_tests.cpp  source_tests.cpp  source_to_sink_tests.c  source_to_sink_tests.cpp  time_tests.cpp  udp_socket_tests.c  udp_socket_tests.cpp
